[project]
name = "bombadil-mobile"
version = "0.1.0"
description = "Property-based testing for mobile UIs — autonomous exploration with temporal correctness properties, powered by Revyl"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Revyl", email = "team@revyl.com" }]
readme = "README.md"

dependencies = [
    "revyl[sdk]",
    "rich>=13.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bombadil"]

[tool.ruff]
target-version = "py311"
line-length = 100
